# imu_core

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.txt  package.xml  readme.md
demos/: demo_imu_3DM_GX3_25.cpp  demo_imu_3DM_GX3_45.cpp  demo_imu_3DM_GX5_25.cpp
include/: ImuInterface.h
include/imu-core/: imu_3DM_GX3_25.hpp  imu_3DM_GX3_25_msg.hpp  imu_3DM_GX3_45.hpp  imu_3DM_GX3_45_msg.hpp  imu_3DM_GX5_25.hpp  imu_3DM_GX5_25_msg.hpp  imu_getter.h  imu_getter.hpp  imu_interface.hpp  imu_interface_orig.hpp
include/imu-ros-rt/: ImuInterface.h
pydemo/: nb.ipynb  test.py
src/: ImuInterface.cpp  imu_3DM_GX3_25.cpp  imu_3DM_GX3_25_backup.cpp  imu_3DM_GX3_45.cpp  imu_3DM_GX5_25.cpp  imu_getter.cpp  imu_interface.cpp  test.cpp  test_interface.cpp
src/programs/: reset_3DM_GX3_25.cpp  test.cpp  test_interface.cpp
srcpy/: imu_core_cpp.cpp
tests/: nb.ipynb  test.py
tests/.ipynb_checkpoints/: nb-checkpoint.ipynb
