<?xml version="1.0"?>
<package>
  <name>imu-core</name>
  <version>1.0.0</version>
  <description>ros realtime wrapper over imu-core</description>
  <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <license>TODO</license>
  <author email="vberenz@tuebingen.mpg.de">Vincent Berenz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
