<?xml version="1.0"?>
<package>
  <name>imu_core</name>
  <version>1.0.0</version>
  <description>ros realtime wrapper over imu-core</description>
  <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>
  <license>TODO</license>
  <author email="vberenz@tuebingen.mpg.de">Vincent Berenz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- This provide cmake macros to help building the project. -->
  <build_depend> mpi_cmake_modules </build_depend>
  <run_depend>   mpi_cmake_modules </run_depend>

  <!-- This tools provides real time thread objects in an encapsulated way. -->
  <build_depend> real_time_tools </build_depend>
  <run_depend>   real_time_tools </run_depend>

  <export>
  </export>
</package>
